# a2z-regulatory

./: .gitattributes  .gitignore  CITATION.cff  LICENSE  README.md
data/: .gitignore  README.md
data/JASPAR/: README.md  download.sh
data/crisp_2020_umr_grasses/: README.md  download.sh
data/crisp_2021_umr_angiosperms/: README.md  download.sh
data/lu_2019_ATACseq/: README.md  download.sh
data/maize_RM/: README.md  download.sh
data/marand_2021_scATAC/: README.md  download.sh
data/schep_2015_yeast_ATAC/: README.md  download.sh
docs/: zenodo.md
docs/manuscript/: README.md
envs/: a2z.yml  kipoi.yml
results/: .gitignore  README.md
results/01_models/: 01_preprocess.sh  02_split.py  03_generate_jobs.py  README.md  compare-models.ipynb  compare-models.md  config_comp.ipynb  euk-test.ipynb  euk-test.md  fig1.ipynb  fig1.md  jobs_custom  jobs_full  kmer-compare.ipynb  kmer-compare.md  masked-model.ipynb  masked-model.md  preprocess_single.sh  train.py
results/02_scATAC/: 01_prepare_data.sh  README.md  fig2.ipynb  fig2.md
results/03_interpretation/: JASPAR_pGIA.ipynb  JASPAR_pGIA.md  README.md  fig3.ipynb  fig3.md  fimo_kmers.sh  generate_null_profile.py  gia_meme.py  jaspar_matched_kmers.ipynb  jobs_occlusion  jobs_pGIA  kmer_occlusion.py  mds.ipynb  mds.md  modisco_to_meme.py  modisco_visualize.ipynb  motif_coverage.ipynb  run_modisco.py
src/python/a2z/: README.md  setup.cfg
src/python/a2z/a2z/: plots.py  utils.py
src/python/a2z/a2z/data/: __init__.py  motifs.py
src/python/a2z/a2z/models/: __init__.py  attribution.py
(+30 files in other folders)
