[metadata]
name = a2z
version = attr: a2z.__version__
description = library for Arabidopsis to Zea cross-species chromatin state model project
long_description = file: README.md
keywords = bioinformatics, machine learning, genomics
license = MIT
classifiers =
  Programming Language :: Python :: 3 :: Only

[options]
packages = find:
python_requires = >=3.7

[options.packages.find]
exclude =
  tests

